# cc-forever

./: .gitignore  .mcp.json  LICENSE  NOTICE  README.md  marketplace.json
.claude-plugin/: marketplace.json  plugin.json
commands/: compact.md  delete.md  index.md  query.md  setup.md
hooks/: hooks.json
mcp-server/: README.md  manifest.json  package-lock.json  package.json  pyproject.toml
mcp-server/server/: __init__.py  chunker.py  main.py
mcp-server/src/: auto-index.ts  chunker.ts  config.ts  embedder.ts  index.ts  vectorstore.ts
scripts/: auto-index.mjs  auto-index.py  check-setup.py
skills/compact-session/: SKILL.md
skills/delete-memory/: SKILL.md
skills/index-memory/: SKILL.md
skills/search-memory/: SKILL.md
