[project]
name = "cc-forever-mcp"
version = "1.0.0"
description = "CC-Forever MCP Server - Persistent conversation memory with semantic search"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "txtai>=7.0.0",
    "pyyaml>=6.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
